--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "bcryptjs": "^2.4.3",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "dotenv": "^16.0.3",
       "http-status-codes": "^2.2.0",
       "jsonwebtoken": "^8.5.1",
       "loglevel": "^1.8.0",
